// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Calendar base demo works fine 1`] = `
<base>
  <t-calendar
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="单个选择日历"
    bind:tap="handleCalendar"
  />
</base>
`;

exports[`Calendar Calendar custom-range demo works fine 1`] = `
<custom-range>
  <t-calendar
    maxDate="{{1645891200000}}"
    minDate="{{1643644800000}}"
    value="{{1644854400000}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="自定义区间"
    bind:tap="handleCalendar"
  />
</custom-range>
`;

exports[`Calendar Calendar custom-text demo works fine 1`] = `
<custom-text>
  <t-calendar
    format="{{[Function]}}"
    maxDate="{{1647273600000}}"
    minDate="{{1643644800000}}"
    value="{{1644854400000}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="自定义文案"
    bind:tap="handleCalendar"
  />
</custom-text>
`;

exports[`Calendar Calendar multiple demo works fine 1`] = `
<multiple>
  <t-calendar
    type="multiple"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="多个选择日历"
    bind:tap="handleCalendar"
  />
</multiple>
`;

exports[`Calendar Calendar range demo works fine 1`] = `
<range>
  <t-calendar
    type="range"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="区间选择日历"
    bind:tap="handleCalendar"
  />
</range>
`;
